# your-own-recipes

./: .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
green_lion/: asgi.py  settings.py  urls.py  wsgi.py
your_own_recipes/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
your_own_recipes/migrations/: 0001_initial.py  0002_alter_product_unique_together.py
your_own_recipes/templates/: product_details.html  products_add.html  products_edit.html  products_list.html  products_types_list.html
