[tool.poetry]
name = "your-own-recipes"
version = "0.1.0"
description = "Your own recipes!"
authors = ["Candice Persil <candice.persil@gmail.com>"]
readme = "README.md"
packages = [{include = "your_own_recipes"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2"
flake8 = "^6.0.0"
psycopg = "^3.1.9"
environs = "^9.5.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
